<resources>
    <string name="app_name">AppList</string>
    <string name="txt_hint_telefone">Telefona de contato</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_list">Lista</string>
    <string name="txt_hint_nome">Name</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_hint_curso">Curso desejado</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>